--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,77 @@
-numpy
-pandas
-scikit-learn
-torch
-lightning
-fastapi
-python-multipart
-uvicorn
-pydub
-librosa
-dill
-jinja2
-seaborn
-matplotlib
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.2
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+async-timeout==5.0.1
+attrs==24.2.0
+audioread==3.0.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+contourpy==1.3.1
+cycler==0.12.1
+decorator==5.1.1
+dill==0.3.9
+exceptiongroup==1.2.2
+fastapi==0.115.5
+filelock==3.16.1
+fonttools==4.55.0
+frozenlist==1.5.0
+fsspec==2024.10.0
+h11==0.14.0
+idna==3.10
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.7
+lazy_loader==0.4
+librosa==0.10.2.post1
+lightning==2.4.0
+lightning-utilities==0.11.8
+llvmlite==0.43.0
+mangum==0.19.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+networkx==3.4.2
+numba==0.60.0
+numpy==2.0.2
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+platformdirs==4.3.6
+pooch==1.8.2
+propcache==0.2.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydub==0.25.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-multipart==0.0.17
+pytorch-lightning==2.4.0
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+six==1.16.0
+sniffio==1.3.1
+soundfile==0.12.1
+soxr==0.5.0.post1
+starlette==0.41.2
+sympy==1.13.1
+threadpoolctl==3.5.0
+torch==2.5.1
+torchmetrics==1.6.0
+tqdm==4.67.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.0
+yarl==1.17.2
 #-e .
